[package]
name = "type_tutor"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_conf = {path="../../mlibs/clap_conf/"}
#gobble = {path="../../mlibs/gobble/"}
termion = "1.5.5"
rand="0.7.3"
